unpackaged/main/default/objects/Partner_API__c/Partner_API__c.object-meta.xml
<CustomObject>
    <label>Partner API</label>
    <nameField>
        <displayFormat>NFPartner-{000000}</displayFormat>
        <label>Partner API</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner API</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>