unpackaged/main/default/objects/Partner_API__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner API</relationshipLabel>
    <relationshipName>Partner_API</relationshipName>
    <type>Lookup</type>
</CustomField>