unpackaged/main/default/objects/Partner_API__c/fields/Broker_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account_Id__c</fullName>
    <formula>Broker_Account__r.AccountID18__c</formula>
    <label>Broker Account Id</label>
    <type>Text</type>
</CustomField>