unpackaged/main/default/objects/Partner_API__c/fields/Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Id__c</fullName>
    <label>Partner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>